correct overflow of input text

--- a/components/SearchInput/SearchInput.module.css
+++ b/components/SearchInput/SearchInput.module.css
@@ -14,6 +14,7 @@
 	padding: 1rem;
 	flex: 1;
 	height: 100%;
+	width: 100%;
 }
 
 .input::placeholder {
